# parallel

./: 1_Synchron.hpp  2_Asynchron.hpp  3_DifferentSorter.hpp  4_NonParallelSorter.hpp  CMakeLists.txt  README.txt  parallel_testing.cpp  sorter_non_parallel.cpp  testfile_small.txt
stxxl/: CMakeLists.txt
stxxl/examples/containers/: sorter1.cpp
stxxl/include/stxxl/: parallel_sorter_asynchron  parallel_sorter_synchron  stream
stxxl/include/stxxl/bits/containers/: parallel_sorter_asynchron.h  parallel_sorter_synchron.h
stxxl/include/stxxl/bits/stream/: sort_stream.h  sort_stream_parallel_asynchron.h  sort_stream_parallel_synchron.h
